# ThermSolve

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_interpolation_demo.py  test_unit_ops_demo.py  test_units_demo.py
examples/: interpolation_example.py  plotting_demo.py  substance_example.py
tests/: quick_test.py  test_interpolation.py  test_io.py  test_plotting.py  test_runner.py  test_substances.py  test_unit_operations.py  test_units.py
thermsolve/: __init__.py  interpolation.py  io.py  main.py  plotting.py  substances.py  unit_operations.py  units.py
thermsolve/data/: substance_list.csv
