[project]
name = "thermsolve"
version = "0.1.0"
description = "A Python package for thermodynamic calculations, unit operations, and substance properties."
authors = [
    { name = "Titus Loftin", email = "loftintitus@utexas.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["thermsolve"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
